# RPSGame

./: .gitignore  CMakeLists.txt  README.md  RPSGame.conf  RPSGame.cpp  RPSLog.conf  build_win_x64.bat  build_win_x86.bat
base/config/: RPSConfig.cpp  RPSConfig.h
game/include/: GameBot.h  GameLogic.h  IEventHandler.h  IGameState.h  IRenderObject.h  IScene.h  LButton.h  LTexture.h  RPSCommon.h  RPSCore.h  RPSEngine.h  RenderObjectMenu.h  SceneGame.h
game/src/: LButton.cpp  RPSCore.cpp  RPSEngine.cpp  RenderObjectMenu.cpp  SceneGame.cpp  SceneMenu.cpp
lib/win/gog/x64/: Galaxy64.lib
lib/win/gog/x86/: Galaxy.lib
src/: RPSCore.cpp  RPSCore.h
src/common/: IGameState.h  RPSCommon.h
src/engine/: LButton.cpp  LButton.h  LTexture.cpp  RPSEngine.cpp  RPSEngine.h  SceneCreateLobby.cpp  SceneCreateLobby.h  SceneGame.cpp  SceneGame.h  SceneJoinLobby.cpp  SceneJoinLobby.h  SceneMenu.cpp  SceneMenu.h
src/game/: GameBot.h  GameLogic.cpp  GameLogic.h
src/net/: LobbyClient.cpp  LobbyClient.h  LobbyHost.cpp  LobbyHost.h  RPSNetwork.cpp  RPSNetwork.h  SenderReceiver.h
